--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     
     "action": {
         "default_popup": "popup.html",
-        "default_title": "Hello once more"
+        "default_title": "This tab has no reason."
     },
     
     "commands": {
